objects/redwing__ILT_Session__c.object
<CustomObject>
    <fields>
        <fullName>redwing__All_Day_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox if the ILT Session will be going throughout the whole day</description>
        <label>All-Day Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Date__c</fullName>
        <description>Date when the ILT Session will start/end</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <description>Overview of the ILT Class and its objective</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__End_Time__c</fullName>
        <defaultValue>&quot;20:00&quot;</defaultValue>
        <label>End Time</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__ILT_Class__c</fullName>
        <label>ILT Class</label>
        <referenceTo>redwing__ILT_Class__c</referenceTo>
        <relationshipLabel>ILT Sessions</relationshipLabel>
        <relationshipName>ILT_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>redwing__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Physical location at which ILT Session will be held. Location are created separately and then added to the ILT Session via a look-up</description>
        <label>Location</label>
        <referenceTo>redwing__ILT_Location__c</referenceTo>
        <relationshipLabel>ILT Sessions</relationshipLabel>
        <relationshipName>ILT_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox if the ILT Session will be optional</description>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Start_Time__c</fullName>
        <defaultValue>&quot;08:00&quot;</defaultValue>
        <description>Time at which the ILT Session will start</description>
        <label>Start Time</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ILT Session</label>
    <nameField>
        <label>ILT Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ILT Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>